[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Fonts/Roboto-Thin.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Prefabs/PolygonButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Animations/RibbonWin.tres" type="Animation" id=3]
[ext_resource path="res://UI/Animations/WinRibbon.gd" type="Script" id=4]
[ext_resource path="res://Scripts/UI/SlopedPolygon.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 96
use_filter = true
font_data = ExtResource( 1 )

[node name="WinAnimation" type="Node2D"]
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 4 )
size = Vector2( 700, 150 )
slopeSize = Vector2( 50, 50 )
tailSize = Vector2( 250, 200 )
resultsTimeDelta = 0.6
results = {
"Completion Time": "0:00:00",
"Moves": "0",
"Undos": "0"
}

[node name="RibbonEndR" type="Polygon2D" parent="."]
position = Vector2( 4.85712, -419.857 )
antialiased = true
polygon = PoolVector2Array( 292, -21, 292, 145, 542, 145, 492, 62, 542, -21 )
uv = PoolVector2Array( 0, 5, 5.00001, 5, 3, 3, 5, 1, 0, 1, 0, 3 )

[node name="Body" type="Polygon2D" parent="RibbonEndR"]
color = Color( 0.909804, 0.172549, 0.172549, 1 )
antialiased = true
invert_border = 10.0
polygon = PoolVector2Array( 300, -13, 300, 137, 526, 137, 478.4, 62, 526, -13 )

[node name="RibbonTurnR" type="Polygon2D" parent="."]
position = Vector2( 4.85712, -419.857 )
antialiased = true
polygon = PoolVector2Array( 358, 83, 358, -83, 292, -45, 292, 145 )

[node name="Body" type="Polygon2D" parent="RibbonTurnR"]
color = Color( 0.647059, 0.12549, 0.12549, 1 )
antialiased = true
polygon = PoolVector2Array( 350, 75, 350, -75, 300, -25, 300, 125 )

[node name="RibbonEndL" type="Polygon2D" parent="."]
position = Vector2( 4.85712, -419.857 )
scale = Vector2( -1, 1 )
antialiased = true
polygon = PoolVector2Array( 292, -21, 292, 145, 542, 145, 492, 62, 542, -21 )
uv = PoolVector2Array( 0, 5, 5.00001, 5, 3, 3, 5, 1, 0, 1, 0, 3 )

[node name="Body" type="Polygon2D" parent="RibbonEndL"]
color = Color( 0.909804, 0.172549, 0.172549, 1 )
antialiased = true
invert_border = 10.0
polygon = PoolVector2Array( 300, -13, 300, 137, 526, 137, 478.4, 62, 526, -13 )

[node name="RibbonTurnL" type="Polygon2D" parent="."]
position = Vector2( 4.85712, -419.857 )
scale = Vector2( -1, 1 )
antialiased = true
polygon = PoolVector2Array( 358, 83, 358, -83, 292, -45, 292, 145 )

[node name="Body" type="Polygon2D" parent="RibbonTurnL"]
color = Color( 0.647059, 0.12549, 0.12549, 1 )
antialiased = true
polygon = PoolVector2Array( 350, 75, 350, -75, 300, -25, 300, 125 )

[node name="RibbonMain" type="Polygon2D" parent="."]
position = Vector2( 4.85712, -419.857 )
antialiased = true
polygon = PoolVector2Array( -358, -83, -358, 83, 358, 83, 358, -83 )

[node name="Body" type="Polygon2D" parent="RibbonMain"]
color = Color( 0.909804, 0.172549, 0.172549, 1 )
antialiased = true
polygon = PoolVector2Array( -350, -75, -350, 75, 350, 75, 350, -75 )
uv = PoolVector2Array( -440, -72, -440, 72, 72, 72, 72, -72 )

[node name="Label" type="RichTextLabel" parent="RibbonMain"]
margin_left = -350.0
margin_top = -50.0
margin_right = 350.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 350, 50 )
size_flags_vertical = 5
custom_fonts/normal_font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
bbcode_enabled = true
bbcode_text = "[center]VICTORY![/center]"
text = "VICTORY!"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RibbonWin = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="ResultsContainer" type="MarginContainer" parent="."]
margin_left = -282.143
margin_top = -275.857
margin_right = 292.857
margin_bottom = 204.143
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="ResultsContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 563.0
margin_bottom = 468.0
size_flags_horizontal = 3
custom_constants/separation = 5

[node name="Buttons" type="Node2D" parent="."]
position = Vector2( 4.85712, 380.143 )
scale = Vector2( 0.75, 0.75 )

[node name="Buttons BG" type="Polygon2D" parent="Buttons"]
color = Color( 0.333333, 0.678431, 0.933333, 1 )
offset = Vector2( 5, 5 )
antialiased = true
polygon = PoolVector2Array( -77.7488, -10, -77.7488, 10, 77.7488, 10, 77.7488, -10 )
script = ExtResource( 5 )
centerV = true
centerH = true
slope = 0.0
size = Vector2( 155.498, 20 )

[node name="MenuButton" parent="Buttons/Buttons BG" instance=ExtResource( 2 )]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -326.667, 0 )
color = Color( 0.4, 0.352941, 0.827451, 1 )
size = Vector2( 600, 160 )
angle = 92
text = "Main Menu"
shadowDistance = 10

[node name="NewGameButton" parent="Buttons/Buttons BG" instance=ExtResource( 2 )]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 323.667, 0 )
color = Color( 0.4, 0.352941, 0.827451, 1 )
size = Vector2( 600, 160 )
angle = 92
text = "New Game"
shadowDistance = 10
[connection signal="clicked" from="Buttons/Buttons BG/MenuButton" to="." method="_on_MenuButton_clicked"]
[connection signal="clicked" from="Buttons/Buttons BG/NewGameButton" to="." method="_on_NewGameButton_clicked"]
